--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -8,11 +8,11 @@ build:
   local:
     push: false
   artifacts:
-    - image: harpreet/auth
+    - image: harpreet11/auth
       context: auth
       docker:
         dockerfile: Dockerfile
-        sync:
+      sync:
           manual:
-            - src: '/src/**/*.ts'
+            - src: "/src/**/*.ts"
               dest: .
